<resources>
    <string name="app_name">MgsDashboard</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="toplam_kullanici_sayisi">TOPLAM KULLANICI SAYISI</string>
    <string name="_100">100</string>
    <string name="online_ki_i_say_s">Online Kişi Sayısı</string>
    <string name="_7">7</string>
    <string name="bu_ay_kayitli_kullanici">BU AY KAYITLI KULLANICI</string>
    <string name="_10">10</string>
    <string name="dummyTitle">Dummy Title</string>
    <string name="dummyDescription">Dummy Text</string>
    <string name="kayit_oldu">E*** A*** kayıt oldu.</string>
    <string name="dateOfTwoDays">2 gün önce</string>
    <string name="kay_t_olanlar_7">Kayıt Olanlar (7)</string>
    <string name="son_olaylar_7">Son Olaylar (7)</string>
    <string name="_2028">2028</string>
    <string name="evc_l_hayvan_sayisi">EVCİL HAYVAN SAYISI</string>
    <string name="_1015">1015</string>
    <string name="sah_plend_rme_lani_sayisi">SAHİPLENDİRME İLANI SAYISI</string>
    <string name="_27">27</string>
    <string name="todo">TODO</string>
    <string name="bursa_ilinde_yeni_bir_g_rev">Bursa ilinde yeni bir görev.</string>
    <string name="bir_kullan_c_giri_yapt">Bir kullanıcı giriş yaptı.</string>
    <string name="kay_t_oldu">kayıt oldu.</string>
    <string name="surname">Surname</string>
    <string name="name">Name</string>
    <string name="login_desc">Please enter the details below the continue</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="login_now">Login Now</string>
    <string name="login">Login</string>
    <string name="not_have_account">Not have account? <b>SignUp</b></string>
    <string name="ho_geldiniz">Hoşgeldiniz</string>
    <string name="redminer">Redminer</string>
    <string name="main_page_date">24 / 12 / 2021, 14:43</string>
    <string name="mobil_uygulamalar">Mobil <br>Uygulama</br> </string>
    <string name="mgs_logo">MGS Logo</string>
    <string name="task_completion">TASK COMPLETION</string>
    <string name="elif_akdogan">Elif Akdoğan</string>
    <string name="opened_tasks">OPENED TASKS</string>

</resources>