<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/avfast_background_color"
    tools:context=".ui.fragment.AvfastFragment">

    <TextView
        android:id="@+id/totalNumberOfUsersText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/toplam_kullanici_sayisi"
        android:textAllCaps="true"
        android:textColor="@color/graphic_orange"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/numberOfUsers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/text_label_background"
        android:fontFamily="@font/montserrat_semi_bold"
        android:gravity="center"
        android:text="@string/_100"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/totalNumberOfUsersText" />

    <TextView
        android:id="@+id/numberOfPeopleOnlineText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/online_ki_i_say_s"
        android:textAllCaps="true"
        android:textColor="@color/graphic_orange"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/numberOfUsers" />

    <TextView
        android:id="@+id/numberOfPeopleOnline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/text_label_background"
        android:fontFamily="@font/montserrat_semi_bold"
        android:gravity="center"
        android:text="@string/_7"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/numberOfPeopleOnlineText" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvGraphic"
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:layout_margin="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/numberOfPeopleOnline" />

    <com.arindicatorview.ARIndicatorView
        android:id="@+id/ar_indicator"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:animate_indicator_scrubbing="true"
        app:indicator_animation="@anim/zoom_in"
        app:indicator_color="@color/indicator_unselected_color"
        app:indicator_scrubbing="true"
        app:indicator_shape="@drawable/round_shape"
        app:indicator_size="25"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rvGraphic"
        app:number_of_indicators="5"
        app:selected_color="@color/graphic_orange" />

</androidx.constraintlayout.widget.ConstraintLayout>